z-index fix for clipboard tooltip

--- a/pleiades/notredame/browser/stylesheets/main.css
+++ b/pleiades/notredame/browser/stylesheets/main.css
@@ -185,7 +185,7 @@ span.tooltip {
   position: absolute;
   left: 34px;
   top: -1px;
-  z-index: 10;
+  z-index: 10000;
   border-radius: 5px;
   color: white;
   background-color: #555555;
